Fix menu bar button labels overflowing

--- a/src/components/platforms/windows/WindowsMenuBar.module.css
+++ b/src/components/platforms/windows/WindowsMenuBar.module.css
@@ -56,5 +56,6 @@
 
   .navigationLong {
     display: flex;
+    flex-shrink: 0;
   }
 }
